picture: picture of mine

--- a/cv.html
+++ b/cv.html
@@ -59,7 +59,7 @@
         <div class="content" id="content-small">
             <div class="profile-header" style="display: flex; align-items: center;">
                 <div class="profile-picture" style="flex: 1;margin-left: 50px;">
-                    <img src="https://via.placeholder.com/150" alt="Profile Picture">
+                    <img src="images/image.png" width="140" alt="Profile Picture">
                 </div>
                 <div class="profile-info" style="flex: 0;min-width: 500px;">
                     <h1>About Me</h1>
