feature: add the loading animation

--- a/side-projects.html
+++ b/side-projects.html
@@ -12,6 +12,10 @@
 </head>
 <body>
 
+    <div id="loading-overlay">
+        <div class="loading-spinner"></div>
+    </div>
+    
     <div class="window">
         <div class="title-bar">
             <div class="title">Side Projects</div>
