seo: implement SEO best practices

--- a/arch.html
+++ b/arch.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaka James - Achievements</title>
     <meta name="description" content="Explore the notable achievements and milestones of Isaka James, highlighting contributions, rankings, and experiences in the field of programming and development.">
-    <meta name="keywords" content="achievements, programming, software development, open source, contributions, rankings, Tanzania, UDOM, GitHub, cybersecurity">
+    <meta name="keywords" content="achievements, programming, software development, open source, contributions, rankings, Tanzania, UDOM, GitHub, cybersecurity, Tanzania">
     <meta name="author" content="Isaka James">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/addons.css">
@@ -15,7 +15,7 @@
     <div id="loading-overlay">
         <div class="loading-spinner"></div>
     </div>
-    
+
     <div class="window">
         <div class="title-bar">
             <div class="title">Achievements</div>
