--- a/cv.html
+++ b/cv.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaka James - Curriculum Vitae</title>
     <meta name="description" content="Curriculum Vitae of Isaka James, showcasing education, experience, and skills.">
-    <meta name="keywords" content="CV, resume, education, experience, skills, portfolio, web development, software engineering, AI, cybersecurity, full stack development">
+    <meta name="keywords" content="CV, resume, education, experience, skills, portfolio, web development, software engineering, AI, cybersecurity, full stack development,Tanzania">
     <meta name="author" content="Isaka James">
 
     <meta property="og:title" content="Isaka James - Curriculum Vitae">
     <meta property="og:description" content="Explore the CV of Isaka James, featuring education, experience, and skills in web development, software engineering, and AI research.">
-    <meta property="og:image" content="https://via.placeholder.com/150">
-    <meta property="og:url" content="https://isaka-james.github.io/cv.html">
+    <meta property="og:image" content="https://isaka-james.vercel.app/images/image.png">
+    <meta property="og:url" content="https://isaka-james.vercel.app/cv.html">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Isaka James - Curriculum Vitae">
     <meta name="twitter:description" content="Detailed CV of Isaka James, showcasing expertise in web development, software engineering, and AI research.">
-    <meta name="twitter:image" content="https://via.placeholder.com/150">
-    <meta name="twitter:url" content="https://isaka-james.github.io/cv.html">
+    <meta name="twitter:image" content="https://isaka-james.vercel.app/images/image.png">
+    <meta name="twitter:url" content="https://isaka-james.vercel.app/cv.html">
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/addons.css">
