--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaka James  - Professional Portfolio</title>
     <meta name="description" content="Professional portfolio of Isaka James, showcasing web development, software engineering, and AI research projects.">
-    <meta name="keywords" content="portfolio, web development, software engineering, AI, machine learning, cybersecurity, full stack development, ReactJS, Django, Laravel, Flask, cybersecurity, data analysis, tanzania, coder, rust">
+    <meta name="keywords" content="portfolio, web development, software engineering, AI, machine learning, cybersecurity, full stack development, ReactJS, Django, Laravel, Flask, cybersecurity, data analysis, Tanzania, coder, rust">
     <meta name="author" content="Isaka James">
 
     <meta property="og:title" content="Isaka James - Professional Portfolio">
     <meta property="og:description" content="Explore the professional portfolio of Isaka James, featuring expertise in web development, software engineering, and AI research.">
-    <meta property="og:image" content=""> 
-    <meta property="og:url" content="https://isaka-james.github.io/">
+    <meta property="og:image" content="https://isaka-james.vercel.app/images/image.png"> 
+    <meta property="og:url" content="https://isaka-james.vercel.app/">
     <meta property="og:type" content="website">
 
-    <meta name="twitter:card" content="">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Isaka James - Professional Portfolio">
     <meta name="twitter:description" content="Showcasing projects and expertise in web development, software engineering, and AI research.">
-    <meta name="twitter:image" content="">
-    <meta name="twitter:url" content="">
+    <meta name="twitter:image" content="https://isaka-james.vercel.app/images/image.png">
+    <meta name="twitter:url" content="https://isaka-james.vercel.app/">
 
 
     <link rel="stylesheet" href="css/styles.css">
