--- a/side-projects.html
+++ b/side-projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isaka James - Side Projects</title>
     <meta name="description" content="Explore the side projects and side endeavors of Isaka James, showcasing various contributions and tools developed since 2016.">
-    <meta name="keywords" content="side projects, programming, software development, web development, tools, open-source">
+    <meta name="keywords" content="side projects, programming, software development, web development, tools, open-source, Tanzania">
     <meta name="author" content="Isaka James">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/addons.css">
@@ -15,7 +15,7 @@
     <div id="loading-overlay">
         <div class="loading-spinner"></div>
     </div>
-    
+
     <div class="window">
         <div class="title-bar">
             <div class="title">Side Projects</div>
