projects: projects are many - adding more options on the drop down

--- a/cv.html
+++ b/cv.html
@@ -47,6 +47,7 @@
                         <li><a href="https://github.com/isaka-james/10fastfingers-cheating" target="_blank">10 Fast Fingers Tool</a></li>
                         <li><a href="https://github.com/isaka-james/UDOM-RATIBA-API" target="_blank">UDOM RATIBA API</a></li>
                         <li><a href="https://github.com/isaka-james/cafeterion-customers-app" target="_blank">Cafeterion App</a></li>
+                        <li><a href="https://github.com/isaka-james?tab=repositories&q=&type=&language=&sort=stargazers" target="_blank">More..</a></li>
                     </ul>
                 </li>
                 <li>
