favicon: my fav icon is added

--- a/arch.html
+++ b/arch.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Explore the notable achievements and milestones of Isaka James, highlighting contributions, rankings, and experiences in the field of programming and development.">
     <meta name="keywords" content="achievements, programming, software development, open source, contributions, rankings, Tanzania, UDOM, GitHub, cybersecurity, Tanzania">
     <meta name="author" content="Isaka James">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/addons.css">
 </head>
