--- a/cv.html
+++ b/cv.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="CV, resume, education, experience, skills, portfolio, web development, software engineering, AI, cybersecurity, full stack development,Tanzania">
     <meta name="author" content="Isaka James">
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <meta property="og:title" content="Isaka James - Curriculum Vitae">
     <meta property="og:description" content="Explore the CV of Isaka James, featuring education, experience, and skills in web development, software engineering, and AI research.">
     <meta property="og:image" content="https://isaka-james.vercel.app/images/image.png">
