--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Professional portfolio of Isaka James, showcasing web development, software engineering, and AI research projects.">
     <meta name="keywords" content="portfolio, web development, software engineering, AI, machine learning, cybersecurity, full stack development, ReactJS, Django, Laravel, Flask, cybersecurity, data analysis, Tanzania, coder, rust">
     <meta name="author" content="Isaka James">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <meta property="og:title" content="Isaka James - Professional Portfolio">
     <meta property="og:description" content="Explore the professional portfolio of Isaka James, featuring expertise in web development, software engineering, and AI research.">
