--- a/side-projects.html
+++ b/side-projects.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Explore the side projects and side endeavors of Isaka James, showcasing various contributions and tools developed since 2016.">
     <meta name="keywords" content="side projects, programming, software development, web development, tools, open-source, Tanzania">
     <meta name="author" content="Isaka James">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/addons.css">
 </head>
