change: use my name instead of about me

--- a/cv.html
+++ b/cv.html
@@ -105,7 +105,7 @@
                     <img src="images/image.png" alt="Profile Picture">
                 </div>
                 <div class="profile-info">
-                    <h1>About Me</h1>
+                    <h1>Isaka James</h1>
                     <h4>Low-level Programmer and Full-stack Developer</h4>
                     <p>Passionate about CyberSecurity, App Development, and AI Research.</p>
                     <p><strong>Available :</strong> <a href="https://www.google.com/maps/place/Dodoma/data=!4m2!3m1!1s0x184de55feeaa7ec9:0x8040bf1262e19cee?sa=X&ved=1t:242&ictx=111" target="_blank">Dodoma, Tanzania</a></p>
