--- a/cv.html
+++ b/cv.html
@@ -116,7 +116,7 @@
             <div class="profile-content" style="padding-left: 20px;">
                 <h2>Education</h2>
                 <ul>
-                    <li><strong>Bachelor of Cyber Security & Digital Forensic Engineering</strong> - University of Dodoma, Tanzania (2022 - Present)</li>
+                    <li><strong>Bachelor of Cyber Security & Digital Forensic Engineering</strong> - ( Present)</li>
                 </ul>
 
                 <h2>Experience</h2>
